fix(mobile): a little more whitespace

--- a/src/mobile.scss
+++ b/src/mobile.scss
@@ -2,13 +2,13 @@
 
 @media (max-width: $mobile-breakpoint) {
   .card-body {
-    padding: 0.25rem;
+    padding: 0.5rem;
     hr {
-      margin-top: 0.25rem;
-      margin-bottom: 0.25rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
   }
   .card-header {
-    padding: 0.25rem;
+    padding: 0.5rem;
   }
 }
